--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -38,16 +38,18 @@
     margin: 10px 20px;
 }
 .navdropdown-close{
-    display: none;
+    display: none;   
+
 }
-.navdropdown-open{    
+.navdropdown-open{   
+    display:flex;
+    flex-direction: column;  
     background: white;
     width: 100%;
-    height: 100vh;
-    transition: all 0.3s ease-out;
-    display: flex;
-    flex-direction: column;        
-    z-index: 2;
+    height: 50%;
+    transition: all 0.3s ease-out;     
+    z-index: 1;          
+    
 }
 .navdropdown-open li{
     display: block;
